[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" }
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
anyhow="1.0.68"
getrandom = { version = "0.2", features = ["js"]}
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4"
wasm-bindgen-rayon = "1.0.3"
plonky2 = {version="0.2.2", default-features = false, features=["parallel"]}

[lib]
crate-type = ["cdylib"]